--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
   "dependencies": {
     "@monaco-editor/react": "^4.6.0",
     "@reduxjs/toolkit": "^2.0.1",
+    "@vercel/analytics": "^1.1.1",
+    "@vercel/speed-insights": "^1.0.2",
+    "chalk": "^5.3.0",
     "next": "14.0.4",
     "react": "^18",
     "react-dom": "^18",
-    "react-redux": "^9.0.4",
-    "chalk": "^5.3.0"
+    "react-redux": "^9.0.4"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
